# PolyKalshi_Client

./: ..gitignore.swp  .env  .gitignore  CLAUDE.md  Gamma_Markets_Python.py  README.md  SETUP.MD  current_markets.txt  docker-compose.yml  env.docker  kalshi_ws_client.py  key_store.py  market-dashboard.zip:Zone.Identifier  market_data.json  market_data.txt  models.py  new_orderbook_data.db  orderbook_data.db  package.json  pnpm-lock.yaml  polymarket_debug.txt  pyproject.toml  requirements.txt  rsa_kalshi_key.txt  test_kalshi_delta_sequence.py  test_kalshi_orderbook_processing.py  test_ticker_publisher_validation.py
backend/: Dockerfile  __init__.py  channel_manager.py  global_manager.py  real_market_initializer.py  simple_websocket_server.py  start_server.py  test_atomic_orderbook.py  test_websocket_server.py  ticker_stream_integration.py  websocket_server.py
backend/kalshi-starter-code-python/: check_schema.py  current_markets.txt  find_kalshi_markets.py  kalshi_client.py  migrate_fix.py  migrate_nullable_fields.py  models.py  orchestrate.py  orderbook_processor.py
config/: paths.py  test_paths.py
frontend/: Dockerfile  SEARCH_BACKEND_README.md  package.json  pnpm-lock.yaml  timestamp-rounding-mock.js  tsconfig.json
kalshi-starter-code-python/: .env  clients.py  kalshi_client.py  main.py  models.py  orchestrate.py
poly-starter-code/: Connection.py  Market_Finder.py  connection.py  errors_20250523_182048.txt  market_data.db  market_data.json  models.py  parse_errors.py  raw_messages_poland-presidential-election.txt  run_market_analysis.py  temp_data.json
(+307 files in other folders)
